apps/subsystems/development/coder/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    external-dns.alpha.kubernetes.io/hostname: coder.${domain_name}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - secretName: coder-tls-cert
    hosts:
    - 'coder.${domain_name}'
  rules:
  - host: coder.${domain_name}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              name: http
